--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,31 @@
 <resources>
     <string name="app_name">Farmacias</string>
     <string name="title_activity_listado_enfermeros">ListadoEnfermeros</string>
-    <!--
-    This string is used for square devices and overridden by hello_world in
-    values-round/strings.xml for round devices.
-    -->
+    <string name="title_activity_listado_medicamentos">Listado de Medicamentos</string>
+    <string-array name="listado_medicamentos">
+        <item>Amoxicilina</item>
+        <item>Cafalexina</item>
+        <item>Clotrimazol</item>
+        <item>Fluconazol</item>
+        <item>Ibuprofeno</item>
+        <item>Loratadina</item>
+        <item>Naproxeno</item>
+        <item>Omeprazol</item>
+        <item>Paracetamol</item>
+        <item>Salbutamol</item>
+    </string-array>
+
+    <string-array name="descripcion">
+        <item>Detiene las bacterias</item>
+        <item>Trata  infecciones </item>
+        <item>Para  la tiña corporal </item>
+        <item>Para la candidiasis</item>
+        <item>Para bajar la fiebre</item>
+        <item>Bloquea a histamina</item>
+        <item>Para el dolor</item>
+        <item>Alvia el acidez estomacal</item>
+        <item>Para aliviar cualquier dolor</item>
+        <item>Para las vias respiratorias</item>
+    </string-array>
     <string name="hello_world">Hello Square World!</string>
 </resources>
