se agrego quienes somos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="medicamento_price">Precio:</string>
     <string name="medicamento_stock">Stock:</string>
     <string name="filler">abc</string>
+    <string name="valQuienesSOmos">Quienes Somos</string>
+    <string name="valDescripcionQuienesSomos">Somos una farmacia dinámica, profesional, humana y vanguardista que lleva años apostando por un nuevo concepto de Farmacia más cercana y profesional, que trabaja día a día por y para los que confían en nosotros como un Centro Asesor de Salud.</string>
+    <string name="valQuienesSomos">Quienes Somos</string>
 
     <string-array name="apellidos">
         <item>Ramos Rumin</item>
